New Rails application with view
