# swagger/v1/swagger.yaml
@@ -4,45 +4,6 @@ info:
   title: API V1
   version: v1
 paths:
-  "/homes":
-    get:
-      summary: list homes
-      responses:
-        '200':
-          description: successful
-    post:
-      summary: create home
-      responses:
-        '200':
-          description: successful
-  "/homes/{id}":
-    parameters:
-    - name: id
-      in: path
-      description: id
-      required: true
-      schema:
-        type: string
-    get:
-      summary: show home
-      responses:
-        '200':
-          description: successful
-    patch:
-      summary: update home
-      responses:
-        '200':
-          description: successful
-    put:
-      summary: update home
-      responses:
-        '200':
-          description: successful
-    delete:
-      summary: delete home
-      responses:
-        '200':
-          description: successful
   /api/signup:
     post:
       summary: Creates a user.
@@ -53,8 +14,89 @@ paths:
             schema:
               type: object
               properties:
-                username:
-                  type: string
+                user:
+                  type: object
+                  properties:
+                    email:
+                      type: string
+                    password:
+                      type: string
+                    password_confirmation:
+                      type: string
+      responses: 
+        '201':
+          description: Created
+  /api/login:
+    post:
+      summary: login a user.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user:
+                  type: object
+                  properties:
+                    email:
+                      type: string
+                    password:
+                      type: string
+      responses: 
+        '201':
+          description: Created
+  /api/logout:
+    delete:
+      summary: Logout from account.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                
+      responses: 
+        '201':
+          description: Created
+  /api/forgot_password:
+    post:
+      summary: user forgets password.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user:
+                  type: object
+                  properties:
+                    email:
+                      type: string
+      responses: 
+        '201':
+          description: Created
+  /api/reset_password:
+    post:
+      summary: user reset password.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user:
+                  type: object
+                  properties:
+                    reset_password_token:
+                      type: string
+                    password:
+                      type: string
+                    password_confirmation:
+                      type: string
       responses: 
         '201':
           description: Created
